# azacili-scheduler

./: .gitignore  .travis.yml  README.md  fabfile.py  manage.py  migrations.gv  pyproject.toml  requirements.txt
accounts/: admin.py  models.py
accounts/migrations/: 0001.py  0001_initial.py  0002_user_lessons.py  0002_user_ordering.py  0003_auto_20180828_2243.py  0004_auto_20200924_1804.py
api/: serializers.py  urls.py  utils.py  views.py
azacili/: settings.py  urls.py  utils.py  wsgi.py
azacili/settings/: common.py  dev.py  prod.py
conf/: gunicorn.service  www.azacili.com
core/: urls.py  wsgi.py
core/settings/: common.py  dev.py  prod.py  secrets.ini.example
requirements/: base.txt  dev.txt  prod.txt
schedule/: admin.py  choices.py  models.py  utils.py  views.py
schedule/management/commands/: update_schedules.py
schedule/migrations/: 0001.py  0001_initial.py  0002_auto_20180827_0545.py  0002_auto_20180829_1036.py  0003_auto_20180827_0845.py  0003_course_term.py  0004_auto_20180827_0848.py  0004_auto_20190113_0805.py  0005_auto_20190610_0601.py  0005_lesson_order.py  0006_auto_20180827_0949.py  0006_auto_20190805_0332.py  0007_auto_20190829_0057.py  0007_lesson_section.py  0008_auto_20190829_0134.py  0009_auto_20190901_1249.py  0010.py
static/css/: signin.css  style.css
static/js/: new_models.js  new_views.js
templates/: index.html  login.html
