[tool.poetry]
name = "azacili_scheduler"
version = "0.1.0"
description = ""
authors = [
    "Ülgen Sarıkavak <work@ulgens.me>"
]

[tool.poetry.dev-dependencies]
django-debug-toolbar = "3.2"
django-sslserver = "0.22"
django-migration-vis = "2.0.0"
ipdb = "0.13.7"
ipython = "7.22.0"
fabric = "2.6.0"
factory-boy = "3.2.0"

[tool.poetry.dependencies]
python = "3.8.5"
beautifulsoup4= "4.9.3"
Django = "3.2"
django-braces = "1.14.0"
django-extensions = "3.1.2"
djangorestframework = "3.12.2"
gunicorn = "20.1.0"
html5lib = "1.1"
psycopg2-binary = "2.8.6"
raven = "6.10.0"
requests = "2.25.1"
social-auth-app-django = "4.0.0"
whitenoise = "5.2.0"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
