[tool.poetry]
name = "azacili_scheduler"
version = "0.1.0"
description = ""
authors = [
    "Ülgen Sarıkavak <work@ulgens.me>"
]

[tool.poetry.dev-dependencies]
django-debug-toolbar = "3.2.1"
django-sslserver = "0.22"
django-migration-vis = "2.0.0"
ipdb = "0.13.9"
ipython = "7.25.0"
fabric = "2.6.0"
factory-boy = "3.2.0"

[tool.poetry.dependencies]
python = "3.9.4"
beautifulsoup4= "4.9.3"
Django = "3.2.5"
django-braces = "1.14.0"
django-extensions = "3.1.3"
djangorestframework = "3.12.4"
gunicorn = "20.1.0"
html5lib = "1.1"
psycopg2-binary = "2.9.1"
raven = "6.10.0"
requests = "2.25.1"
social-auth-app-django = "4.0.0"
whitenoise = "5.2.0"

[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.core.masonry.api"
