[tool.poetry]
name = "azacili_scheduler"
version = "0.1.0"
description = ""
authors = [
    "Ülgen Sarıkavak <work@ulgens.me>"
]

[tool.poetry.dev-dependencies]
django-debug-toolbar = "3.2.2"
django-sslserver = "0.22"
django-migration-vis = "2.0.0"
ipdb = "0.13.9"
ipython = "7.28.0"
fabric = "2.6.0"
factory-boy = "3.2.1"

[tool.poetry.dependencies]
python = "3.9.4"
beautifulsoup4= "4.10.0"
Django = "3.2.8"
django-braces = "1.14.0"
django-extensions = "3.1.3"
djangorestframework = "3.12.4"
gunicorn = "20.1.0"
html5lib = "1.1"
psycopg2-binary = "2.9.1"
raven = "6.10.0"
requests = "2.26.0"
social-auth-app-django = "5.0.0"
whitenoise = "5.3.0"

[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.core.masonry.api"
